# Video-Codex

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  next.config.js  package-lock.json  package.json
src/app/: globals.css  page.tsx
src/app/api/convert/: route.ts
src/app/components/: VideoConverter.tsx
video-codec/: Cargo.toml
video-codec/src/: main.rs
