[package]
name = "video-codec"
version = "5.1.0"
edition = "2021"

[dependencies]
zstd = { version = "0.13", features = ["zstdmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"
chacha20poly1305 = "0.10"
argon2 = { version = "0.5", features = ["password-hash"] }
rand = "0.8"
anyhow = "1.0"
tempfile = "3.10"
base64 = "0.21"
